--- a/index.html
+++ b/index.html
@@ -1,64 +1,99 @@
 <!DOCTYPE html>
 <html>
-<title> Daft Kinks!!!!</title>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>DAFT KINKS!!!!</title>
+	<style type="text/css" media="screen">
+     * {
+       margin: 0; 
+       padding: 0;
+     }
 
+     div#banner { 
+       position: absolute; 
+       top: 0; 
+       left: 0; 
+       background-color: #DDEEEE; 
+       width: 100%; 
+     }
+     div#banner-content { 
+       width: 800px; 
+       margin: 0 auto; 
+       padding: 10px; 
+       border: 0px solid #000;
+     }
+     div#main-content { 
+       padding-top: 100px;
+    }
+    </style>
 </head>
 <body>
-<h1>Daft Kinks!!!!</h1>
-<button style="font-size : 20px; height:50px;width:200px">Bet $10,000</button>
-<h2>Transaction History</h2>
-<b> 5/4/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 5/3/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 5/2/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 5/1/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/30/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/29/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/28/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/27/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/26/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/25/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/24/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/23/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/22/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/21/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/20/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/19/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/18/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/17/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/16/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/15/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/14/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/13/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/12/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/11/2024: </b> <b style = "color:#d11d1d"> -$500</b>
-	<br><br>
-<b> 4/10/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+<div id="banner">
+	<div id="banner-content">
+		<center>
+			<a href = "https://www.https://umdsketchup.wixsite.com/home" style="font-size:30px">
+				HOT SINGLE COMEDY STUDENTS IN YOUR AREA
+			</a>
+		</center>
+	</div>
+</div>
+<div>
+	<br><br><br>
+	<!--<h1>Daft Kinks!!!!</h1>-->
+	<img src = "daftkinks.jpeg" style="height: 119px; width: 200 px">
+	<br>
+	<button style="font-size : 20px; height:50px;width:200px">Bet $10,000</button>
+	<h2>Transaction History</h2>
+	<b> 5/4/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 5/3/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 5/2/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 5/1/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/30/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/29/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/28/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/27/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/26/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/25/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/24/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/23/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/22/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/21/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/20/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/19/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/18/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/17/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/16/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/15/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/14/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/13/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/12/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/11/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+		<br><br>
+	<b> 4/10/2024: </b> <b style = "color:#d11d1d"> -$500</b>
+</div>
 </body>
 </html>
